src/scss/components/_blocks.scss
/* ... */
/* Columns Block */
.wp-block-columns {
  flex-wrap: wrap !important;
  justify-content: space-between;

  .editor-block-list__layout {
    flex-wrap: wrap !important;
    justify-content: space-between;

    .editor-block-list__block {
      flex-basis: 100%;
      padding: 0 !important;
      margin-left: 0 !important;
      margin-right: 0 !important;
    }

    .editor-block-list__block-edit {
      margin-left: 0 !important;
      margin-right: 0 !important;
    }
  }

  .wp-block-column {
    flex-basis: 100%;
    padding: 0 !important;
    margin-left: 0 !important;
    margin-right: 0 !important;
    margin-bottom: var(--space-150);
  }

  @media only screen and (min-width: var(--bp-medium)) {
    .editor-block-list__layout {
      .editor-block-list__block {
        flex-basis: 48%;
      }
    }

    .wp-block-column {
      flex-basis: 48%;
    }
  }

  @media only screen and (min-width: var(--bp-large)) {
    &.has-3-columns,
    &.has-6-columns {
      .editor-block-list__layout {
        .editor-block-list__block {
          flex-basis: 32%;
        }
      }

      .wp-block-column {
        flex-basis: 32%;
      }
    }
  }
}

/* Cover Block */
.wp-block-cover,
.wp-block-cover-image {
  width: auto;

  .wp-block-cover-text {
    margin: var(--space-100) 0;
  }
}

/* Embed Block */
.wp-block-embed {
  .wp-block-embed__wrapper {
    text-align: center;
  }

  &.type-video {
    & > .wp-block-embed__wrapper {
      position: relative;
      width: 100%;
      height: 0;
      padding-top: 56.25%;

      & > iframe {
        position: absolute;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;
      }
    }
  }
}

/* File Block */
.wp-block-file {
  .wp-block-file__button {
    color: var(--white-rich);
    background-color: var(--gray-800);
    border-color: var(--gray-800);
    border-width: 1px;
    border-style: solid;
    border-radius: var(--space-025);
    padding: 0.5rem 1rem 0.625rem;
    transition:
      background-color 0.2s,
      color 0.2s,
      border-color 0.2s,
      border-radius 0.2s,
      box-shadow 0.2s;
    -webkit-appearance: none;
    white-space: nowrap;

    &:hover {
      color: var(--white-rich);
      background-color: var(--color-primary);
      border-color: var(--color-primary);
    }

    &:active,
    &:focus {
      color: var(--white-rich);
      background-color: var(--color-primary--dark);
      border-color: var(--color-primary--dark);
      @include box-shadow(2, inset, isImportant);
    }
  }
}

/* Gallery Block */
.wp-block-gallery {
  padding-left: 0;

  .blocks-gallery-image figure,
  .blocks-gallery-item figure {
    align-items: center !important;
    justify-content: center !important;
    margin-bottom: 0;

    img {
      max-height: 9.375rem;
    }
  }

  &:not(.components-placeholder) {
    margin: var(--space-150) auto;
  }
}

/* Image Block */
.wp-block-image {
  max-width: none;

  img {
    display: block;
  }

  &.alignleft,
  &.alignright {
    width: 100%;
  }

  &.alignfull img {
    width: 100vw;
  }
}

/* Latest Posts Block */
ul.wp-block-latest-posts.alignwide,
ul.wp-block-latest-posts.alignfull,
ul.wp-block-latest-posts.is-grid.alignwide,
ul.wp-block-latest-posts.is-grid.alignwide {
  padding: 0 var(--space-050);
}

/* Table Block */
.wp-block-table {
  overflow-x: auto;

  table {
    border-collapse: collapse;
    width: 100%;
  }

  td,
  th {
    padding: var(--space-025);
  }

  th {
    font-weight: 700;
  }

  &.is-style-stripes {
    tr:nth-child(odd) {
      background-color: var(--gray-050);
    }
  }
}

/* Quote Block */
.wp-block-quote {
  &.is-large {
    margin: 0 auto var(--space-100);
  }

  &:not(.is-large):not(.is-style-large) {
    border-left: $single__entry-quote__border-left;
    padding: $single__entry-quote__padding;
    margin: $single__entry-quote__margin;
  }
}

/* Pullquote Block */
.wp-block-pullquote > p:first-child {
  margin-top: 0;
}

/* Separator Block */
.wp-block-separator {
  margin: calc(var(--space-150) * 2) auto;
  padding: 0;

  &:not(.is-style-dots) {
    border-bottom: 2px solid var(--gray-200);
  }

  &.is-style-dots:before {
    font-size: var(--text-150);
    color: var(--text__color--subtle);
    letter-spacing: var(--space-100);
    padding-left: var(--space-100);
  }
}

/* Remove duplicate rule-line when a separator
 * is followed by an H1, or H2 */
.wp-block[data-type="core/separator"]
  + .wp-block[data-type="core/heading"]
  h1:before,
.wp-block[data-type="core/separator"]
  + .wp-block[data-type="core/heading"]
  h2:before {
  display: none;
}

/* Video Block */
.wp-block-video video {
  max-width: 100%;
}
/* ... */

